<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_nombre"
        android:textSize="@dimen/tv_dimen_letra"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>

    <TextView
        android:id="@+id/tvIntentos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_intentos"
        android:textSize="@dimen/tv_dimen_letra"
        android:textAlignment="center"
        android:layout_below="@+id/tvNombre"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>

    <EditText
        android:id="@+id/etResolver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_hint_numero"
        android:layout_below="@+id/tvIntentos"
        android:textAlignment="center"
        android:textSize="@dimen/et_dimen_letra"
        android:inputType="number"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>

    <Button
        android:id="@+id/btnIntentar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_acceder"
        android:textSize="@dimen/et_dimen_letra"
        android:layout_below="@id/etResolver"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:onClick="clickIntentar"/>

</RelativeLayout>